--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "HX",
-    "description": "Powered By Misaka-blog",
+    "name": "GGG",
+    "description": "ntymtym iumy",
     "keywords": [],
     "env": {
         "TYPE": {
